Fixed tool label text alignment in CallToAction component styles

--- a/src/features/CallToAction/components/Tools/styles.scss
+++ b/src/features/CallToAction/components/Tools/styles.scss
@@ -28,6 +28,7 @@
 
 .tools__label {
   line-height: 1;
+  text-align: left;
 
   @include fluid-property($breaks-sm, $breaks-xl, 15px, 20px, font-size);
 }
